# android-bazel-migration-sample

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build.gradle.kts  settings.gradle  settings.gradle.kts
app/: BUILD.bazel  build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/org/morfly/sample/: BUILD
app/src/main/java/org/morfly/sample/details/: BUILD
app/src/main/java/org/morfly/sample/feed/: BUILD  FeedAdapter.kt  FeedFragment.kt  FeedViewModel.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: AndroidExtensions.kt  AndroidKtx.kt  AndroidUtils.kt  MigrateToBazelTask.kt  MigrationPlugin.kt
buildSrc/src/main/kotlin/templates/: ApplicationBuildTemplate.kt  LibraryBuildTemplate.kt  RootBuildTemplate.kt  WorkspaceTemplate.kt  android_app_template.kt  android_library_template.kt  root_build_template.kt  third_party_build_template.kt  workspace_template.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
images/: BUILD.bazel  build.gradle.kts
images/src/main/java/org/morfly/sample/imagedata/: DefaultImagesRepository.kt  ImagesRepository.kt
