load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()

java_import(
    name = "kotlin_coroutines_jvm",
    jars = glob(["coroutines/*.jar"]),
    visibility = ["//visibility:public"]
)

load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain")

default_java_toolchain(
    name = "java_toolchain",
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_kotlin//kotlin:kotlin.bzl",
    "define_kt_toolchain",
    "kt_javac_options",
    "kt_kotlinc_options",
)

#kt_kotlinc_options(name = "kt_kotlinc_options")
#
#kt_javac_options(name = "kt_javac_options")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",
    jvm_target = "1.8",
    language_version = "1.4",
    experimental_use_abi_jars = False,
#    javac_options = ":kt_javac_options",
#    kotlinc_options = ":kt_kotlinc_options",
)