load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_android//android:rules.bzl", "android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

exports_files(
    ["src/main/AndroidManifest.xml"],
    visibility = ["//app:__subpackages__"],
)

android_library(
    name = "res",
    resource_files = glob(["src/main/res/**"]),
    custom_package = "org.morfly.sample",
    manifest = "src/main/AndroidManifest.xml",
    visibility = ["//app:__subpackages__"],
    deps = [
        artifact("androidx.appcompat:appcompat"),
        artifact("com.google.android.material:material"),
        artifact("androidx.constraintlayout:constraintlayout"),
    ],
)

android_binary(
    name = "bin",
    custom_package = "org.morfly.sample",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "21",
        "targetSdkVersion": "29",
        "versionCode": "1",
        "versionName": "1.0",
    },
    multidex = "native",
    incremental_dexing = 1,
    debug_key = ":debug.keystore",
    visibility = ["//visibility:public"],
    deps = [
        ":res",
        "//app/src/main/java/org/morfly/sample:app",
    ],
)