load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "images",
    srcs = glob(["src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**"]),
    custom_package = "org.morfly.sample.imagedata",
    manifest = "src/main/AndroidManifest.xml",
    visibility = ["//visibility:public"],
    deps = [
        "//:dagger",
        "//:kotlin_coroutines_jvm",
 		artifact("androidx.core:core-ktx"),
		artifact("androidx.appcompat:appcompat"),
		artifact("com.google.android.material:material")
    ],
)